111/deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: chaos-injector
  labels:
    name: chaos-injector
